gvpe NEWS

2.2
	- protocol version 0.1, compatible with older releases,
          but upgrade is recommended to due changed ondemand behaviour.
        - new per-node options max-ttl and max-queue.
        - convert from iom.C to libev, a high-performance event loop
          (http://software.schmorp.de/pkg/libev).
        - tcp connections were leaking in some cases.
        - retry more aggressively (once/s) to establish a connection if
          new packets arrive for it.
        - save a lot of setsockopt calls when the tos doesn't change.
        - honor disabled even on initial connect attempt.
        - changed callback mechanism to be slightly less portable
          but more efficient mechanism (standards-compliant c++ compilers
          should work).
        - upgraded liblzf to version 3.2.
        - dropped -fno-exceptions due to ev++.h using it.
        - node-up/Down scripts are now run in sequence.
        - bugfixes.

2.01 Thu Mar 29 19:26:04 CEST 2007
	- protocol version 0.1, compatible with older releases.
        - bugfix of callback.h, might have cause callback return values to
          be corrupted on architectures like sparc before.
        - dns transport retries more aggressively.
        - updated documentation, improved dns transport reliability
          and throughput.
        - added experimental support for sha256 and sha512 digests.

2.0 Mon Dec  5 13:59:26 CET 2005
	- protocol version 0.1, compatible with older releases.
        - implement allow-direct, deny-direct node config statements.
        - implemented != for sockinfo. This fixes a bug where
          gvpe sent packets to the old ip address of another host
          even though it had received packets from it's new address.
          This only causes problems if you forget to -HUP your gvpe after
          your ip address changed, which is *required*.
        - sets close-on-exec flag on tcp connections. This fixes a bug