@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man 2.16 (Pod::Simple 3.05)
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.32
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -48,25 +48,22 @@
 .    ds R" ''
 'br\}
 .\"
-.\" Escape single quotes in literal strings from groff's Unicode transform.
-.ie \n(.g .ds Aq \(aq
-.el       .ds Aq '
-.\"
 .\" If the F register is turned on, we'll generate index entries on stderr for
 .\" titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and index
 .\" entries marked with X<> in POD.  Of course, you'll have to process the
 .\" output yourself in some meaningful fashion.
-.ie \nF \{\
+.if \nF \{\
 .    de IX
 .    tm Index:\\$1\t\\n%\t"\\$2"
 ..
 .    nr % 0
 .    rr F
 .\}
-.el \{\
-.    de IX
-..
-.\}
+.\"
+.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
+.\" way too many mistakes in technical documents.
+.hy 0
+.if n .na
 .\"
 .\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
 .\" Fear.  Run.  Save yourself.  No user-serviceable parts.
@@ -132,11 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "GVPE.CONF 5"
-.TH GVPE.CONF 5 "2008-08-07" "2.2" "GNU Virtual Private Ethernet"
-.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
-.\" way too many mistakes in technical documents.
-.if n .ad l
-.nh
+.TH GVPE.CONF 5 "2008-08-10" "2.2" "GNU Virtual Private Ethernet"
 .SH "NAME"
 gvpe.conf \- configuration file for the GNU VPE daemon
 .SH "SYNOPSIS"
@@ -145,14 +138,20 @@ gvpe.conf \- configuration file for the GNU VPE daemon
 \&   udp\-port = 407
 \&   mtu = 1492
 \&   ifname = vpn0
-\&
+.Ve
+.PP
+.Vb 2
 \&   node = branch1
 \&   hostname = 1.2.3.4
-\&
+.Ve
+.PP
+.Vb 3
 \&   node = branch2
 \&   hostname = www.example.net
 \&   udp\-port = 500       # this host uses a different udp\-port
-\&
+.Ve
+.PP
+.Vb 2
 \&   node = branch3
 \&   connect = ondemand
 .Ve
@@ -184,7 +183,7 @@ nickname\*(C'\fR line.
 .PP
 Every node that is part of the network must have a section that starts
 with \f(CW\*(C`node = nickname\*(C'\fR. The number and order of the nodes is important
-and must be the same on all hosts. It is not uncommon for node sections to
+and must be the same on all nodes. It is not uncommon for node sections to
 be completely empty \- if the default values are right.
 .PP
 Node-specific settings can be used at any time. If used before the first
@@ -280,7 +279,8 @@ select the correct syntax to use for network-related commands.
 .IP "MTU=1436" 4
 .IX Item "MTU=1436"
 The \s-1MTU\s0 to set the interface to. You can use lower values (if done
-consistently on all hosts), but this is usually ineffective.
+consistently on all nodes), but this is usually either inefficient or
+simply ineffective.
 .IP "NODES=5" 4
 .IX Item "NODES=5"
 The number of nodes in this \s-1GVPE\s0 network.
@@ -342,7 +342,7 @@ device.
 .IP "ip-proto = numerical-ip-protocol" 4
 .IX Item "ip-proto = numerical-ip-protocol"
 Sets the protocol number to be used for the rawip protocol. This is a
-global option because all hosts must use the same protocol, and since
+global option because all nodes must use the same protocol, and since
 there are no port numbers, you cannot easily run more than one gvpe
 instance using the same protocol, nor can you share the protocol with
 other programs.
@@ -366,11 +366,11 @@ configuration file, so if you are behind a proxy without access to a dns
 server better use numerical \s-1IP\s0 addresses.
 .Sp
 To make best use of this option disable all protocols except tcp in your
-config file and make sure your routers (or all other hosts) are listening
+config file and make sure your routers (or all other nodes) are listening
 on a port that the proxy allows (443, https, is a common choice).
 .Sp
 If you have a router, connecting to it will suffice. Otherwise tcp must be
-enabled on all hosts.
+enabled on all nodes.
 .Sp
 Example:
 .Sp
@@ -407,7 +407,7 @@ this information to the \f(CW\*(C`if\-up\*(C'\fR script.
 .Sp
 Recommended values are 1500 (ethernet), 1492 (pppoe), 1472 (pptp).
 .Sp
-This value must be the minimum of the mtu values of all hosts.
+This value must be the minimum of the mtu values of all nodes.
 .IP "node = nickname" 4
 .IX Item "node = nickname"
 Not really a config setting but introduces a node section. The nickname is
@@ -431,8 +431,8 @@ The name of the remote node.
 The node id of the remote node.
 .IP "DESTIP=188.13.66.8" 4
 .IX Item "DESTIP=188.13.66.8"
-The numerical \s-1IP\s0 address of the remote host (gvpe accepts connections from
-everywhere, as long as the other host can authenticate itself).
+The numerical \s-1IP\s0 address of the remote node (gvpe accepts connections from
+everywhere, as long as the other node can authenticate itself).
 .IP "DESTPORT=655 # deprecated" 4
 .IX Item "DESTPORT=655 # deprecated"
 The \s-1UDP\s0 port used by the other side.
@@ -471,7 +471,7 @@ use paths like \f(CW\*(C`hostkeys/%s\*(C'\fR to fetch the files at the location 
 \&\f(CW\*(C`gvpectrl\*(C'\fR puts them.
 .Sp
 Since only the private key file of the current node is used and the
-private key file should be kept secret per-host to avoid spoofings, it is
+private key file should be kept secret per-node to avoid spoofings, it is
 not recommended to use this feature.
 .IP "rekey = seconds" 4
 .IX Item "rekey = seconds"
@@ -479,7 +479,7 @@ Sets the rekeying interval in seconds (default: \f(CW3600\fR). Connections are
 reestablished every \f(CW\*(C`rekey\*(C'\fR seconds.
 .Sh "\s-1NODE\s0 \s-1SPECIFIC\s0 \s-1SETTINGS\s0"
 .IX Subsection "NODE SPECIFIC SETTINGS"
-The following settings are node-specific, that is, every node can have
+The following settings are node\-specific, that is, every node can have
 different settings, even within the same gvpe instance. Settings that are
 set before the first node section set the defaults, settings that are
 set within a node section only apply to the given node.
@@ -488,17 +488,20 @@ set within a node section only apply to the given node.
 Allow direct connections to this node. See \f(CW\*(C`deny\-direct\*(C'\fR for more info.
 .IP "compress = yes|true|on | no|false|off" 4
 .IX Item "compress = yes|true|on | no|false|off"
-Wether to compress data packets sent to this host (default: \f(CW\*(C`yes\*(C'\fR).
+Wether to compress data packets sent to this node (default: \f(CW\*(C`yes\*(C'\fR).
 Compression is really cheap even on slow computers and has no size
 overhead at all, so enabling this is a good idea.
 .IP "connect = ondemand | never | always | disabled" 4
 .IX Item "connect = ondemand | never | always | disabled"
 Sets the connect mode (default: \f(CW\*(C`always\*(C'\fR). It can be \f(CW\*(C`always\*(C'\fR (always
-try to establish and keep a connection to the given host), \f(CW\*(C`never\*(C'\fR
+try to establish and keep a connection to the given node), \f(CW\*(C`never\*(C'\fR
 (never initiate a connection to the given host, but accept connections),
 \&\f(CW\*(C`ondemand\*(C'\fR (try to establish a connection when there are outstanding
 packets in the queue and take it down after the keepalive interval) or
 \&\f(CW\*(C`disabled\*(C'\fR (node is bad, don't talk to it).
+.Sp
+Routers will automatically be forced to \f(CW\*(C`always\*(C'\fR unless they are
+\&\f(CW\*(C`disabled\*(C'\fR, to ensure all nodes can talk to each other.
 .IP "deny-direct = nodename | *" 4
 .IX Item "deny-direct = nodename | *"
 Deny direct connections to the specified node (or all nodes when \f(CW\*(C`*\*(C'\fR
@@ -602,7 +605,7 @@ Sets the type value to be used for outgoing (and incoming) packets sent
 via the \s-1ICMP\s0 transport.
 .Sp
 The default is \f(CW0\fR (which is \f(CW\*(C`echo\-reply\*(C'\fR, also known as
-\&\*(L"ping-replies\*(R"). Other useful values include \f(CW8\fR (\f(CW\*(C`echo\-request\*(C'\fR, a.k.a.
+\&\*(L"ping\-replies\*(R"). Other useful values include \f(CW8\fR (\f(CW\*(C`echo\-request\*(C'\fR, a.k.a.
 \&\*(L"ping\*(R") and \f(CW11\fR (\f(CW\*(C`time\-exceeded\*(C'\fR), but any 8\-bit value can be used.
 .IP "if-up-data = value" 4
 .IX Item "if-up-data = value"
@@ -629,28 +632,38 @@ Expire packets that couldn't be sent after this many seconds
 active connection, in the hope of establishing a connection soon. This
 value specifies the maximum lifetime a packet will stay in the queue, if a
 packet gets older, it will be thrown away.
-.IP "max-queue = positive-number" 4
-.IX Item "max-queue = positive-number"
+.IP "max-queue = positive\-number>=1" 4
+.IX Item "max-queue = positive-number>=1"
 The maximum number of packets that will be queued (default: \f(CW512\fR)
 for this node. If more packets are sent then earlier packets will be
 expired. See \f(CW\*(C`max\-ttl\*(C'\fR, above.
 .IP "router-priority = 0 | 1 | positive\-number>=2" 4
 .IX Item "router-priority = 0 | 1 | positive-number>=2"
-Sets the router priority of the given host (default: \f(CW0\fR, disabled). If
-some host tries to connect to another host without a hostname, it asks
-the router host for it's \s-1IP\s0 address. The router host is the one with the
-highest priority larger than \f(CW1\fR that is currently reachable.
+Sets the router priority of the given node (default: \f(CW0\fR, disabled).
 .Sp
-Make sure all hosts always connect (\f(CW\*(C`connect = always\*(C'\fR) to the router
-hosts, otherwise connecting to them might be impossible.
+If some node tries to connect to another node but it doesn't have a
+hostname, it asks a router node for it's \s-1IP\s0 address. The router node
+chosen is the one with the highest priority larger than \f(CW1\fR that is
+currently reachable. This is called a \fImediated\fR connection, as the
+connection itself will still be direct, but it uses another node to
+mediate between the two nodes.
+.Sp
+The value \f(CW0\fR disables routing, that means if the node receives a packet
+not for itself it will not forward it but instead drop it.
 .Sp
 The special value \f(CW1\fR allows other hosts to route through the router
-host, but they will never route through it by default. The value \f(CW0\fR
-disables routing. The idea behind this is that some hosts can, if
-required, bump the \f(CW\*(C`router\-priority\*(C'\fR setting to higher than \f(CW1\fR in their
-local config to route through specific hosts. If \f(CW\*(C`router\-priority\*(C'\fR is
-\&\f(CW0\fR, then routing will be refused, so \f(CW1\fR serves as a \*(L"enable, but do
-not use by default\*(R" switch.
+host, but they will never route through it by default (i.e. the config
+file of another node needs to specify a router priority higher than one
+to choose such a node for routing).
+.Sp
+The idea behind this is that some hosts can, if required, bump the
+\&\f(CW\*(C`router\-priority\*(C'\fR setting to higher than \f(CW1\fR in their local config to
+route through specific hosts. If \f(CW\*(C`router\-priority\*(C'\fR is \f(CW0\fR, then routing
+will be refused, so \f(CW1\fR serves as a \*(L"enable, but do not use by default\*(R"
+switch.
+.Sp
+Nodes with \f(CW\*(C`router\-priority\*(C'\fR set to \f(CW2\fR or higher will always be forced
+to \f(CW\*(C`connect\*(C'\fR = \f(CW\*(C`always\*(C'\fR (unless they are \f(CW\*(C`disabled\*(C'\fR).
 .IP "tcp-port = port-number" 4
 .IX Item "tcp-port = port-number"
 Similar to \f(CW\*(C`udp\-port\*(C'\fR (default: \f(CW655\fR), but sets the \s-1TCP\s0 port number.
@@ -661,19 +674,19 @@ officially assigned by \s-1IANA\s0!).
 .SH "CONFIG DIRECTORY LAYOUT"
 .IX Header "CONFIG DIRECTORY LAYOUT"
 The default (or recommended) directory layout for the config directory is:
-.IP "" 4
+.IP "\(bu" 4
 .IX Xref "gvpe.conf"
 The config file.
-.IP "" 4
+.IP "\(bu" 4
 .IX Xref "if-up"
 The if-up script
 .IP "," 4
 .IX Xref "node-up node-down"
 If used the node up or node-down scripts.
-.IP "" 4
+.IP "\(bu" 4
 .IX Xref "hostkey"
 The private key (taken from \f(CW\*(C`hostkeys/nodename\*(C'\fR) of the current host.
-.IP "" 4
+.IP "\(bu" 4
 .IX Xref "pubkey nodename"
 The public keys of the other nodes, one file per node.
 .SH "SEE ALSO"
