@@ -45,7 +45,7 @@ nickname> line.
 
 Every node that is part of the network must have a section that starts
 with C<node = nickname>. The number and order of the nodes is important
-and must be the same on all hosts. It is not uncommon for node sections to
+and must be the same on all nodes. It is not uncommon for node sections to
 be completely empty - if the default values are right.
 
 Node-specific settings can be used at any time. If used before the first
@@ -154,7 +154,8 @@ select the correct syntax to use for network-related commands.
 =item MTU=1436
 
 The MTU to set the interface to. You can use lower values (if done
-consistently on all hosts), but this is usually ineffective.
+consistently on all nodes), but this is usually either inefficient or
+simply ineffective.
 
 =item NODES=5
 
@@ -223,7 +224,7 @@ device.
 =item ip-proto = numerical-ip-protocol
 
 Sets the protocol number to be used for the rawip protocol. This is a
-global option because all hosts must use the same protocol, and since
+global option because all nodes must use the same protocol, and since
 there are no port numbers, you cannot easily run more than one gvpe
 instance using the same protocol, nor can you share the protocol with
 other programs.
@@ -248,11 +249,11 @@ configuration file, so if you are behind a proxy without access to a dns
 server better use numerical IP addresses.
 
 To make best use of this option disable all protocols except tcp in your
-config file and make sure your routers (or all other hosts) are listening
+config file and make sure your routers (or all other nodes) are listening
 on a port that the proxy allows (443, https, is a common choice).
 
 If you have a router, connecting to it will suffice. Otherwise tcp must be
-enabled on all hosts.
+enabled on all nodes.
 
 Example:
 
@@ -292,7 +293,7 @@ this information to the C<if-up> script.
 
 Recommended values are 1500 (ethernet), 1492 (pppoe), 1472 (pptp).
 
-This value must be the minimum of the mtu values of all hosts.
+This value must be the minimum of the mtu values of all nodes.
 
 =item node = nickname
 
@@ -322,8 +323,8 @@ The node id of the remote node.
 
 =item DESTIP=188.13.66.8
 
-The numerical IP address of the remote host (gvpe accepts connections from
-everywhere, as long as the other host can authenticate itself).
+The numerical IP address of the remote node (gvpe accepts connections from
+everywhere, as long as the other node can authenticate itself).
 
 =item DESTPORT=655 # deprecated
 
@@ -364,7 +365,7 @@ use paths like C<hostkeys/%s> to fetch the files at the location where
 C<gvpectrl> puts them.
 
 Since only the private key file of the current node is used and the
-private key file should be kept secret per-host to avoid spoofings, it is
+private key file should be kept secret per-node to avoid spoofings, it is
 not recommended to use this feature.
 
 =item rekey = seconds
@@ -389,18 +390,21 @@ Allow direct connections to this node. See C<deny-direct> for more info.
 
 =item compress = yes|true|on | no|false|off
 
-Wether to compress data packets sent to this host (default: C<yes>).
+Wether to compress data packets sent to this node (default: C<yes>).
 Compression is really cheap even on slow computers and has no size
 overhead at all, so enabling this is a good idea.
 
 =item connect = ondemand | never | always | disabled
 
 Sets the connect mode (default: C<always>). It can be C<always> (always
-try to establish and keep a connection to the given host), C<never>
+try to establish and keep a connection to the given node), C<never>
 (never initiate a connection to the given host, but accept connections),
 C<ondemand> (try to establish a connection when there are outstanding
 packets in the queue and take it down after the keepalive interval) or
 C<disabled> (node is bad, don't talk to it).
+
+Routers will automatically be forced to C<always> unless they are
+C<disabled>, to ensure all nodes can talk to each other.
 
 =item deny-direct = nodename | *
 
@@ -543,7 +547,7 @@ active connection, in the hope of establishing a connection soon. This
 value specifies the maximum lifetime a packet will stay in the queue, if a
 packet gets older, it will be thrown away.
 
-=item max-queue = positive-number
+=item max-queue = positive-number>=1
 
 The maximum number of packets that will be queued (default: C<512>)
 for this node. If more packets are sent then earlier packets will be
@@ -551,21 +555,31 @@ expired. See C<max-ttl>, above.
 
 =item router-priority = 0 | 1 | positive-number>=2
 
-Sets the router priority of the given host (default: C<0>, disabled). If
-some host tries to connect to another host without a hostname, it asks
-the router host for it's IP address. The router host is the one with the
-highest priority larger than C<1> that is currently reachable.
+Sets the router priority of the given node (default: C<0>, disabled).
 
-Make sure all hosts always connect (C<connect = always>) to the router
-hosts, otherwise connecting to them might be impossible.
+If some node tries to connect to another node but it doesn't have a
+hostname, it asks a router node for it's IP address. The router node
+chosen is the one with the highest priority larger than C<1> that is
+currently reachable. This is called a I<mediated> connection, as the
+connection itself will still be direct, but it uses another node to
+mediate between the two nodes.
+
+The value C<0> disables routing, that means if the node receives a packet
+not for itself it will not forward it but instead drop it.
 
 The special value C<1> allows other hosts to route through the router
-host, but they will never route through it by default. The value C<0>
-disables routing. The idea behind this is that some hosts can, if
-required, bump the C<router-priority> setting to higher than C<1> in their
-local config to route through specific hosts. If C<router-priority> is
-C<0>, then routing will be refused, so C<1> serves as a "enable, but do
-not use by default" switch.
+host, but they will never route through it by default (i.e. the config
+file of another node needs to specify a router priority higher than one
+to choose such a node for routing).
+
+The idea behind this is that some hosts can, if required, bump the
+C<router-priority> setting to higher than C<1> in their local config to
+route through specific hosts. If C<router-priority> is C<0>, then routing
+will be refused, so C<1> serves as a "enable, but do not use by default"
+switch.
+
+Nodes with C<router-priority> set to C<2> or higher will always be forced
+to C<connect> = C<always> (unless they are C<disabled>).
 
 =item tcp-port = port-number
 
